Correct text alignment for multi-line menu items.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -100,6 +100,10 @@ nav.flex-nav {
   color: black;
 }
 
+.flex-nav span {
+  text-align: center;
+}
+
 .flex-nav ul > li > a + div {
   display: none;
 }
